// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render a checkbox component (checked) 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
}

.emotion-2:checked+.emotion-5 {
  background-color: #F1694B;
  color: rgba(255,255,255,1);
}

.emotion-2:checked+.emotion-5::after {
  content: '';
  display: block;
}

.emotion-4 {
  background-color: white;
  bottom: 0;
  cursor: pointer;
  left: 0;
  right: 0;
  box-sizing: border-box;
  top: 0;
  -webkit-transition: all ease-in 0.15s;
  transition: all ease-in 0.15s;
  position: absolute;
  border-radius: 0.5rem;
  border-width: 2px;
  border-style: solid;
  overflow: hidden;
  border-color: #F1694B;
}

<div>
  <label
    class="emotion-0 emotion-1"
  >
    <input
      checked=""
      class="emotion-2 emotion-3"
      type="checkbox"
    />
    <span
      class="emotion-4 emotion-5"
    />
  </label>
</div>
`;

exports[`<Checkbox /> should render a checkbox component (custom color) 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
}

.emotion-2:checked+.emotion-5 {
  background-color: #EB5757;
  color: rgba(255,255,255,1);
}

.emotion-2:checked+.emotion-5::after {
  content: '';
  display: block;
}

.emotion-4 {
  background-color: white;
  bottom: 0;
  cursor: pointer;
  left: 0;
  right: 0;
  box-sizing: border-box;
  top: 0;
  -webkit-transition: all ease-in 0.15s;
  transition: all ease-in 0.15s;
  position: absolute;
  border-radius: 0.5rem;
  border-width: 2px;
  border-style: solid;
  overflow: hidden;
  border-color: #EB5757;
}

<div>
  <label
    class="emotion-0 emotion-1"
  >
    <input
      class="emotion-2 emotion-3"
      type="checkbox"
    />
    <span
      class="emotion-4 emotion-5"
    />
  </label>
</div>
`;

exports[`<Checkbox /> should render a checkbox component 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
}

.emotion-2:checked+.emotion-5 {
  background-color: #F1694B;
  color: rgba(255,255,255,1);
}

.emotion-2:checked+.emotion-5::after {
  content: '';
  display: block;
}

.emotion-4 {
  background-color: white;
  bottom: 0;
  cursor: pointer;
  left: 0;
  right: 0;
  box-sizing: border-box;
  top: 0;
  -webkit-transition: all ease-in 0.15s;
  transition: all ease-in 0.15s;
  position: absolute;
  border-radius: 0.5rem;
  border-width: 2px;
  border-style: solid;
  overflow: hidden;
  border-color: #F1694B;
}

<div>
  <label
    class="emotion-0 emotion-1"
  >
    <input
      class="emotion-2 emotion-3"
      type="checkbox"
    />
    <span
      class="emotion-4 emotion-5"
    />
  </label>
</div>
`;
